--- a/src/AboutMeBox.css
+++ b/src/AboutMeBox.css
@@ -23,8 +23,8 @@
 
 .Profile-Picture {
     margin-top: 30px;
-    width: 20vh;
-    height: 20vh;
+    width: 25vh;
+    height: 25vh;
 
 }
 .Profile-Picture img {
@@ -35,6 +35,8 @@
 .Profile-Text {
     color: white;
     text-align: center;
+    margin-top: 30px;
+    margin-bottom: 50px;
 }
 
 .Web-Dev {
@@ -42,7 +44,6 @@
     text-align: center;
     padding: 10px;
     margin: 0px;
-    margin-bottom: 3vh;
 }
 
 .Profile-Color {
@@ -73,36 +74,48 @@
 }
 
 .AboutMe-Contact-Container h1 {
-    font-size: 20px;
+    font-size: 15px;
     color: white;
     margin: 2px;
     
 }
 
 
-.Programming-Languages {
+.Programming-Languages-Container {
     width: 50vh;
     height: 5vh;
-    background-size: 50px;
     display: flex;
     justify-content: center;
-    gap: 30px;
+    gap: 20px;
+    margin-bottom: 50px;
 }
-.Programming-Languages img {
-    max-height:100%; 
+.Programming-Languages-Container img {
+    max-height:80%; 
     max-width:100%;
 }
 
 
-.Programming-Languages-Text {
+
+.Profile-Html, .Profile-Css, .Profile-Javascript, .Profile-React {
     color: white;
-    font-size: 20px;
+    text-align: center;
+    font-size: 8px;
 }
 
-.Programming-Text-Container {
-    display: flex;
-    justify-content: center;
-    width: 50vh;
-    height: 5vh;
-    gap: 0px;
+.Red {
+    color: #f55656;
 }
+
+.Blue {
+    color: #1584bf;
+}
+
+
+.Orange {
+    color: #debc35;
+}
+
+.React {
+    color: #3bb9eb;
+}
+
