--- a/src/Background.css
+++ b/src/Background.css
@@ -1,15 +1,14 @@
-.background-container {
-    height: 90%;
-    width:77%;
-    margin-left: auto;
-}
-    
-
-
 .background {
     background-color: black;
-    height: 100%;
+    height: 100vh; /* Use viewport height */
     width: 100%;
     display: flex;
-    align-items: end;
+    align-items: center;
+    justify-content: center;
+}
+
+.background-container {
+    height: 100%; /* Maintain your existing percentage */
+    width: 77%;
+    margin-left: auto;
 }
