--- a/src/Background.css
+++ b/src/Background.css
@@ -1,14 +1,21 @@
-.background {
+:root {
+    --navbar-height: 40px; /* adjust to your navbar height */
+  }
+
+  .background {
     background-color: black;
-    height: 100vh; /* Use viewport height */
+    height: 100vh;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    position: fixed; /* Add this */
+    top: var(--navbar-height); /* Add this */
 }
 
 .background-container {
-    height: 100%; /* Maintain your existing percentage */
+    height: calc(100vh - var(--navbar-height));
     width: 77%;
     margin-left: auto;
-}
+    overflow-y: auto;
+ }
