--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -3,7 +3,10 @@
     justify-content: center;
     align-items: center;
     padding: 15px 20px;
-
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 100;
 
 }
 
