--- a/src/AboutMe.css
+++ b/src/AboutMe.css
@@ -1,12 +1,12 @@
 .stor_tittel {
-    font-size: 8vh;
+    font-size: 6vh;
     color: white;
 
 }
 
 .AboutMePicture {
-    width: 60vh;
-    height: 50vh;
+    width: 150vh;
+    height: 40vh;
     border-radius: 25vh;
 }
 
@@ -23,6 +23,8 @@
     text-align: center;
     color: white;
     display: flex;
+    justify-content: center;
     flex-direction: column;
     height: 60vh;
+    margin-left: 10vh;
 }
