--- a/src/AboutMeBox.css
+++ b/src/AboutMeBox.css
@@ -1,23 +1,22 @@
 
 .AboutMeBox-Container {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0; /* Align to the left edge of the viewport */
-    display: flex;
-    justify-content: left;
-    
-    
-
-}
-.AboutMeBox-Size {
     width: 20%;
+    position: fixed;
+    left: 0;
+    top: var(--navbar-height);
     height: calc(100vh - var(--navbar-height));
+    display: flex;
+}
+
+.AboutMeBox-Size {
+    width: 100%;
+    height: 100vh;
+    margin-top: calc(-1 * var(--navbar-height));
+    padding-top: var(--navbar-height);
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center; /* Add this to center content vertically */
-    gap: 2vh; /* Add some consistent spacing between elements */
+    background-color: #463f4b;
 }
 
 .AboutMeBox-Color {
@@ -25,15 +24,19 @@
 }
 
 .Profile-Picture {
-    margin-top: 0; /* Remove top margin since we're using flex centering */
-    width: 25vh;
-    height: 25vh;
-    margin-top: 3vh;
+    width: 20vh;
+    height: 20vh;
+    margin-top: 10vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .Profile-Picture img {
-    width: 100%;        /* Makes the image fill the div width */
-    height: auto;       /* Maintains the aspect ratio */
-  }
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    border-radius: 7vh;
+}
 
 .Profile-Text {
     color: white;
