--- a/src/Background.css
+++ b/src/Background.css
@@ -1,21 +1,13 @@
-:root {
-    --navbar-height: 40px; /* adjust to your navbar height */
-  }
-
-  .background {
-    background-color: black;
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: fixed; /* Add this */
-    top: var(--navbar-height); /* Add this */
+.background {
+  background-color: black;
+  height: 100vh;
+  margin-top: var(--navbar-height);
+  display: flex;
 }
 
 .background-container {
-    height: calc(100vh - var(--navbar-height));
-    width: 77%;
-    margin-left: auto;
-    overflow-y: auto;
- }
+  width: 77%;
+  margin-left: 23%;
+  height: calc(100vh - var(--navbar-height));
+  overflow: hidden;
+}
