--- a/src/ProjectCard.css
+++ b/src/ProjectCard.css
@@ -1,6 +1,7 @@
 .project-card {
   width: 45vh;
-  background: linear-gradient(to top, #4D4C55 0%, #6F5768 100%);
+  background: linear-gradient(to top, #540d1f 0%, #8b1538 100%);
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
   border-radius: 20px;
   box-shadow: 0 10px 30px rgba(19, 20, 20, 0.4);
   overflow: hidden;
@@ -8,6 +9,7 @@
   flex-direction: column;
   transition: transform 0.3s ease;
   height: 80vh;
+  margin-top: 3vh;
 }
 
 
