--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -22,11 +22,5 @@
 }
 
 .color {
-    background: #131414; /* Fallback for old browsers */
-    background: -moz-linear-gradient(to top, #131414 0%, #2f2530 100%); /* Firefox 3.6+ */
-    background: -webkit-gradient(linear, left bottom, left top, color-stop(0%,#131414), color-stop(100%,#2f2530)); /* Chrome,Safari 4+ */
-    background: -webkit-linear-gradient(to top, #131414 0%, #2f2530 100%); /* Chrome 10+, Safari 5.1+ */
-    background: -o-linear-gradient(to top, #131414 0%, #2f2530 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(to top, #131414 0%, #2f2530 100%); /* IE10+ */
-    background: linear-gradient(to top, #131414 0%, #2f2530 100%); /* W3C, standard */
+    background: linear-gradient(to top, #0B1219 0%, #202F44 100%);
 }
