--- a/src/AboutMeBox.css
+++ b/src/AboutMeBox.css
@@ -151,3 +151,92 @@
 h1 {
     font-family: 'Open Sans', sans-serif;
 }
+
+
+@media screen and (max-width: 768px) {
+    /* Skjul unødvendige elementer */
+    .Web-Dev,
+    .Programming-Languages-Container,
+    .Profile-Html,
+    .Profile-Css,
+    .Profile-Javascript,
+    .AboutMe-Contact-Container-Parent:nth-child(5),
+    .Profile-React {
+        display: none;
+    }
+
+    .container2 {
+        width: 100%;
+    }
+
+    .AboutMeBox-Container {
+        width: 100%;
+        margin-top: auto;
+        height: 15vh;
+        position: fixed;
+        bottom: 0;
+        z-index: 1000;
+    }
+
+    .AboutMeBox-Size {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 1rem;
+        display: grid;
+        grid-template-columns: auto 1fr auto; /* Tre kolonner: bilde, navn, kontaktinfo */
+        grid-template-areas: 
+            "picture name contact"
+            "picture name contact"
+            "picture name contact";
+        align-items: center;
+    }
+
+    .Profile-Picture {
+        width: 45px;
+        height: 45px;
+        margin: 0;
+        grid-area: picture;
+    }
+
+    .Profile-Picture img {
+        border-radius: 50%;
+    }
+
+    .Profile-Text {
+        font-size: 14px;
+        color: white;
+        margin: 0;
+        white-space: nowrap;
+        grid-area: name;
+    }
+
+    .AboutMe-Contact-Container-Parent {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        margin: 5px 0;
+    }
+
+    .AboutMe-Contact-Container-Parent img {
+        height: 15px;
+        margin: 0;
+    }
+
+    .AboutMe-Contact-Container {
+        display: flex;
+        flex-direction: column;
+        gap: 2px;
+    }
+
+    .AboutMe-Contact-Container h1 {
+        font-size: 10px;
+        margin: 0;
+        color: #D3D3D3;
+        white-space: nowrap;
+    }
+
+    .AboutMe-Contact-Container h1:last-child {
+        color: white;
+    }
+}
