--- a/src/Background.css
+++ b/src/Background.css
@@ -14,3 +14,9 @@
   height: 100%;  /* Changed from calc() since parent already has correct height */
   overflow: hidden;
 }
+
+@media screen and (max-width: 768px) {
+  .background {
+    all: unset;
+}
+}
