--- a/src/ProjectCard.css
+++ b/src/ProjectCard.css
@@ -105,3 +105,17 @@
   background: rgba(255, 255, 255, 0.1);
   transform: scale(1.05);
 }
+
+@media screen and (max-width: 768px) {
+  .project-card:first-child {
+    margin-top: 20vh; /* Only the first card gets extra margin to clear navbar */
+  }
+
+  .project-card:last-child {
+    margin-bottom: 20vh; /* Only the last card gets extra margin to clear footer */
+  }
+
+.project-card {
+  margin-top: 3vh;
+}
+} 
