--- a/src/Resume.css
+++ b/src/Resume.css
@@ -45,3 +45,30 @@
     font-size: 1.1rem;
     line-height: 1.6;
 }
+
+
+
+
+@media screen and (max-width: 768px) {
+    .cards-container {
+        margin-top: 10vh;
+        margin-bottom: 0px;
+    }
+    .header {
+        margin: 0px;
+    }
+
+    .card {
+        margin-top: 5vh;
+        width: 100%;
+    }
+    .container {
+        padding: 1vh;
+    }
+    .card:last-child {
+        margin-bottom: 20vh;
+    }
+    .card:first-child {
+        margin-top: 20vh;
+    }
+}
