--- a/src/AboutMeBox.css
+++ b/src/AboutMeBox.css
@@ -83,7 +83,7 @@
 .AboutMe-Contact-Container h1 {
     color: white;
     margin: 0.5vh;
-    text-align: left; /* Keep the left alignment */
+    text-align: left; 
     font-size: clamp(12px, 1.5vh, 16px);
 }
 
@@ -128,17 +128,17 @@
 }
 
 .AboutMe-Contact-Container-Parent img {
-    height: 3vh;        /* Set a proportional height */
-    width: auto;        /* Maintain aspect ratio */
-    max-width: 100%;    /* Prevent overflow */
-    object-fit: contain; /* Ensure images fit properly */
+    height: 3vh;      
+    width: auto;      
+    max-width: 100%;   
+    object-fit: contain;
     margin-left: 3vh;
 }
 
 
 
 .AboutMe-Contact-Container-Parent {
-    display: flex;          /* Enable Flexbox */
+    display: flex;         
     align-items: center;  
     height: auto;
     width: 100%;
@@ -153,7 +153,6 @@ h1 {
 
 
 @media screen and (max-width: 768px) {
-    /* Skjul unødvendige elementer */
     .Web-Dev,
     .Programming-Languages-Container,
     .Profile-Html,
@@ -183,7 +182,7 @@ h1 {
         margin: 0;
         padding: 1rem;
         display: grid;
-        grid-template-columns: auto 1fr auto; /* Tre kolonner: bilde, navn, kontaktinfo */
+        grid-template-columns: auto 1fr auto; 
         grid-template-areas: 
             "picture name contact"
             "picture name contact"
