--- a/src/AboutMe.css
+++ b/src/AboutMe.css
@@ -147,20 +147,20 @@ body {
 
 @media screen and (max-width: 768px) {
     .card {
-      /* Fjern alle fancy effekter midlertidig */
+     
       backdrop-filter: none;
       -webkit-backdrop-filter: none;
       
-      /* Gjør teksten skarpere */
+     
       filter: none;
       -webkit-filter: none;
     }
   
     .card h2, 
     .card p {
-      /* Sett faste pixel-størrelser */
-      font-size: 16px; /* eller 14px */
-      /* Fjern gradient og effekter */
+    
+      font-size: 16px;
+ 
       background: none;
       -webkit-background-clip: unset;
       background-clip: unset;
@@ -168,7 +168,7 @@ body {
     }
 
     li {
-        font-size: 1rem; /* 14px */
+        font-size: 1rem; 
         line-height: 1.5;
         white-space: normal;
         word-wrap: break-word;
