--- a/src/Background.css
+++ b/src/Background.css
@@ -11,7 +11,7 @@
 .background-container {
   width: 77%;
   margin-left: 23%;
-  height: 100%;  /* Changed from calc() since parent already has correct height */
+  height: 100%;  
   overflow: hidden;
 }
 
